# ji-cloud

./: .dockerignore  .env.sample  .firebaserc  .gitignore  .gitmodules  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  firebase.json  package-lock.json  package.json  setup.md  temp.txt  todo.md
backend/_core/rust/: Cargo.toml
backend/_core/rust/src/: env.rs  google.rs  http.rs  lib.rs  settings.rs
backend/api/: .env.sample  Cargo.toml  Dockerfile  Dockerfile.local  Makefile.toml  README.md  docker-compose.local.yml  out.txt  sqlx-data.json  test.session
backend/api/actions/: Cargo.toml
backend/api/actions/src/: auth.rs  lib.rs  settings.rs  user.rs
backend/api/app/: Cargo.toml  Makefile.toml
backend/api/app/src/: db.rs  logger.rs  main.rs  settings.rs
backend/api/crates/actions/: Cargo.toml
backend/api/crates/server/: Cargo.toml
backend/api/docker/: test.sh
backend/api/docker/.cargo/: config.toml
backend/api/fixtures/: 10_modules.sql  12_user_font.sql  13_user_default_perms.sql  14_audio.sql  15_meta_kinds_image.sql  16_meta_kinds_animation.sql  18_badge.sql  18_circle.sql  19_public_user.sql  1_user.sql  20_course.sql  20_playlist.sql  21_resource.sql  22_course.sql  22_pro_dev.sql  2_image_meta_kinds.sql  2_meta_kinds.sql  3_category_ordering.sql  4_category_nesting.sql  5_image.sql  6_user_no_perms.sql  8_jig.sql  9_animation.sql
backend/api/handler/: Cargo.toml
backend/api/integration-testing/: .eslintrc.js  package-lock.json  package.json  test.js  test.js.md  test.js.snap
backend/api/main/: Cargo.toml  Makefile.toml
backend/api/main/src/: db.rs  (+2 more)
backend/api/migrations/: 20200730195239_extensions.sql  20200730195601_add_user.sql  20200730202320_add_user-scope.sql  20200730202659_add_category.sql  20200804213437_add_image_metadata.sql  20200813011755_drop_image_metadata.source.sql  20200820192204_make_category_deletion_cascade.sql  20200908195730_add_extra_user_info.sql  20200928232141_last_synced_at_for_images.sql  20201001211308_image_kind.sql  20201006200956_issue-178_extra_info.sql  20201015192354_add_jig_tables.sql  20201023002445_fix_jig_tables.sql  20201030172808_settings_table.sql  20201102182349_geocode_to_location.sql  20201103203949_fix_defaults_for_created-at.sql  20201109184759_add_user-web-image-library-tables.sql  20201118203115_add_user-audio-library.sql  20201130193803_jig-content-type.sql  20201208223847_add_indexes_for_ordering.sql  20210105185603_animation.sql  20210111220544_drop-index-name.sql  20210115193324_web-media-library.sql  20210130004607_media-uploaded-at.sql  20210203210359_user-new-auth.sql  20210222203536_jig-drop-cover-end.sql  20210222220343_frontend-locale-tables.sql  20210223233336_updated-at-trigger.sql  20210224113817_session.sql  20210224113829_empty-user.sql  20210301204300_user-email-deletable.sql  20210303200427_module-id-default.sql  20210311185300_media-uploads.sql  20210311185300_task-queue.sql  20210323201038_user-color-table.sql  20210330174946_user-audio-library-created-at-default.sql  20210402201545_jig-parents.sql  20210408204655_jig-module-reconciliation.sql  20210409001901_jig-self-editable-default.sql  20210415233132_module_not_nulls.sql  (+183 more)
backend/api/query/: list_media.sql
backend/api/server/: Cargo.toml
backend/api/src/: algolia.rs  category-tree.sql  db.rs  domain.rs  error.rs  ext.rs  extractor.rs  google.rs  google_oauth.rs  http.rs  image_ops.rs  image_search.rs  jwk.rs  jwkkeys.rs  jwt.rs  lib.rs  logger.rs  main.rs  more_futures.rs  reject.rs  reply.rs  s3.rs  server.rs  service.rs  settings.rs  stripe.rs  token.rs  translate.rs  trending.rs  utils.rs
backend/api/static/: spec-explorer.html
backend/core/: Cargo.toml
backend/core/src/: config.rs  env.rs  google.rs  http.rs  lib.rs  sentry.rs  settings.rs
backend/pages/: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  sqlx-data.json
backend/pages/handlebars/: 404.hbs  home.hbs  info.hbs  no-auth.hbs  spa.hbs
backend/pages/src/: db.rs  loader.rs  logger.rs  main.rs  reject.rs  server.rs  settings.rs
backend/pages/static/: head.css
backend/pages/templates/: info.html  spa.html  title.html
backend/stable_id/: Cargo.toml
backend/stable_id/src/: main.rs
backend/util/media-refresh/: Cargo.toml
backend/util/s3-key-migrate/: Cargo.toml
build-utils/batch-tag/: Cargo.toml
build-utils/batch-tag/src/: context.rs  data.rs  main.rs  options.rs  report.rs  requests.rs
build-utils/batch-user-jigs/: Cargo.toml  README.md  batch-out.txt  out.txt
build-utils/batch-user-jigs/src/: context.rs  main.rs  options.rs
build-utils/db_migrations/: Cargo.toml  Makefile.toml
build-utils/db_migrations/src/: main.rs  options.rs
build-utils/image-upload/: Cargo.toml
build-utils/image-upload/src/: data.rs  main.rs  options.rs  report.rs
build-utils/legacy-player/meta/: Cargo.toml  README.md
build-utils/legacy-player/migrate/: Cargo.toml  README.md  missing_orig_games.txt  run-parse-till-done.sh  sync.sh
build-utils/legacy-player/transcode/: Cargo.toml  README.md  run-parse-till-done.sh  sync.sh
config/rust/: Cargo.toml
config/rust/src/: lib.rs
frontend/_core/rust/: Cargo.toml
frontend/admin/app/: Cargo.toml  README.md  package-lock.json  package.json  rollup.dev.js  rollup.release.js
frontend/app/admin/: Cargo.toml  package-lock.json  package.json  rollup.dev.js  rollup.release.js  rollup.sandbox.js
frontend/apps/: Cargo.toml  Makefile.toml  empty.js  log.txt  package-lock.json  package.json  rollup.common.js  rollup.common.mjs  rollup.dev.js  rollup.local.js  rollup.local.mjs  rollup.release.js  rollup.release.mjs  rollup.sandbox.js  rollup.sandbox.mjs  rust-toolchain.toml
frontend/apps/static/: head.css  manifest.json
frontend/build-utils/templates-builder/: Cargo.toml
frontend/core/rust/: Cargo.toml
frontend/user/app/: Cargo.toml  README.md  package-lock.json  package.json  rollup.dev.js  rollup.release.js  rollup.sandbox.js
shared/rust/: Cargo.toml  rustfmt.toml
shared/rust/src/: auth.rs  category.rs  config.rs  domain.rs  error.rs  lib.rs  media.rs  response.rs  user.rs
(+6065 files in other folders)
