[package]
name = "ji-cloud-api"
version = "0.1.0"
authors = [
    "dakom <david.komer@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>" # chloe@launchbadge.com 
]
edition = "2018"
default-run = "ji-cloud-api"

[dependencies]
actix-cors = "0.6.0-beta.2"
actix-http = "3.0.0-beta.9"
actix-rt = "2.2.0"
actix-service = "2.0.0"
actix-web = "4.0.0-beta.8"
actix-web-httpauth = "0.6.0-beta.2"

algolia = { git = "https://github.com/rrcwang/algolia-rs", rev = "b4441a8cab5963d5a11eeb54fee128f5c73d6a1a" }
anyhow = "1.0.43"
argon2 = "0.2.3"
base64 = "0.13.0"
bitflags = "1.3.2"
chrono = "0.4.19"
chrono-tz = "0.5.3"
cloudevents-sdk = { version = "0.4.0", features = ["actix"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.16"
http = "0.2.4"
image = "0.23.14"
jsonwebtoken = "7.2.0"
listenfd = { version = "0.3.5", optional = true }
log = "0.4.14"
mp3-metadata = "0.3.3"
paseto = "2.0.2"
percent-encoding = "2.1.0"
pin-project = "1.0.8"
rand = "0.8.4"
rgb = "0.8.27"
reqwest = { version = "0.11.4", features = ["cookies", "json", "stream"] }
rusoto_core = "0.47.0"
rusoto_signature = "0.47.0"
rusoto_s3 = "0.47.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = { version = "1.0.66", features = ["preserve_order"] }
serde_urlencoded = "0.7.0"
sha2 = "0.9.5"
time = "=0.2.25"
tokio = "1.10.0"
url = { version = "2.2.2", features = ["serde"] }
uuid = "0.8.2"

# project deps
core = { path = "../core", features = ["db"] }
shared = { path = "../../shared/rust", features = ["backend"] }

[dependencies.sendgrid]
version = "0.17.3"
default-features = false
features = ["native-tls", "async"]

[dependencies.sentry]
version = "0.23.0"
features = ["anyhow", "backtrace", "contexts", "panic", "transport"]

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "json", "chrono", "offline", "migrate"]


[features]
default = ["listenfd", "core/listenfd"]

# we use native-tls but this ensures we have a stable version of OpenSSL on *nix
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.36", features = ["vendored"] }

# argon2 *needs* perf
[profile.dev.package.argon2]
opt-level = 3

[dev-dependencies]
once_cell = "1.8.0"
insta = { version = "1.7.2", features = ["redactions"] }
yup-oauth2 = "5.1.0"


# temp for actix4 support, until it comes out of beta: https://github.com/cloudevents/sdk-rust/pull/147
[patch.crates-io]

cloudevents-sdk = { git = "https://github.com/cloudevents/sdk-rust", branch = "actix-web-4.0.0-beta.8" }
