[package]
authors = [
  "dakom <david.komer@gmail.com>",
  "Chloe Ross <orangesnowfox@gmail.com>", # chloe@launchbadge.com
]
default-run = "ji-cloud-api"
edition = "2018"
name = "ji-cloud-api"
version = "0.1.0"

[dependencies]
actix-cors = "0.6.0-beta.2"
actix-files = "0.6.0-beta.2"
actix-http = "3.0.0-beta.10"
actix-rt = "2.3.0"
actix-service = "2.0.1"
actix-web = "4.0.0-beta.9"
actix-web-httpauth = "0.6.0-beta.2"

algolia = {git = "https://github.com/RickyLB/algolia-rs", branch = "main"}
anyhow = "1.0.44"
argon2 = "0.3.1"
base64 = "0.13.0"
bitflags = "1.3.2"
chrono = "0.4.19"
chrono-tz = "0.6.0"
cloudevents-sdk = {version = "0.4.0", features = ["actix"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.17"
http = "0.2.5"
image = "0.23.14"
indexmap = "1.7.0"
jsonwebtoken = "7.2.0"
listenfd = {version = "0.3.5", optional = true}
log = "0.4.14"
mp3-metadata = "0.3.3"
paseto = "2.0.2"
percent-encoding = "2.1.0"
pin-project = "1.0.8"
rand = "0.8.4"
reqwest = {version = "0.11.6", features = ["cookies", "json", "stream"]}
rgb = "0.8.27"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
rusoto_signature = "0.47.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_derive = "1.0.130"
serde_json = {version = "1.0.68", features = ["preserve_order"]}
serde_urlencoded = "0.7.0"
sha2 = "0.9.8"
time = "0.2.27"
tokio = "1.12.0"
url = {version = "2.2.2", features = ["serde"]}
uuid = "0.8.2"

# project deps
core = {path = "../core", features = ["db"]}
shared = {path = "../../shared/rust", features = ["backend"]}
csv = "1.1.6"

[dependencies.sendgrid]
default-features = false
features = ["native-tls", "async"]
version = "0.17.4"

[dependencies.sentry]
features = ["anyhow", "backtrace", "contexts", "panic", "transport"]
version = "0.23.0"

[dependencies.sqlx]
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "json", "chrono", "offline", "migrate"]
version = "0.5.9"

[features]
default = ["listenfd", "core/listenfd"]

# we use native-tls but this ensures we have a stable version of OpenSSL on *nix
[target.'cfg(unix)'.dependencies]
openssl = {version = "0.10.36", features = ["vendored"]}

# argon2 *needs* perf
[profile.dev.package.argon2]
opt-level = 3

[dev-dependencies]
insta = {version = "1.8.0", features = ["redactions"]}
once_cell = "1.8.0"
yup-oauth2 = {version = "6.0.0", features = ["hyper-rustls"]}

# temp for actix4 support, until it comes out of beta: https://github.com/cloudevents/sdk-rust/pull/147
# forked to revert change that breaks
[patch.crates-io]
cloudevents-sdk = {git = "https://github.com/rrcwang/sdk-rust", branch = "actix-web-4.0.0-beta.8"}
