[package]
authors = [
  "dakom <david.komer@gmail.com>",
  "Chloe Ross <orangesnowfox@gmail.com>", # chloe@launchbadge.com
]
default-run = "ji-cloud-api"
edition = "2021"
name = "ji-cloud-api"
version = "0.1.0"

[dependencies]
actix-cors = "0.6.2"
actix-files = "0.6.2"
actix-http = "3.2.1"
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = "4.1.0"
actix-web-httpauth = "0.8.0"
tracing-actix-web = { version = "0.6.0", default-features = false }

algolia = { git = "https://github.com/RickyLB/algolia-rs", branch = "main" }
anyhow = "1.0.64"
argon2 = "0.4.1"
base64 = "0.13.0"
bitflags = "1.3.2"
chrono = "0.4.22"
chrono-tz = "0.6.3"
cloudevents-sdk = { version = "0.5.0", features = ["actix"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.24"
http = "0.2.5"
image = "0.23.14"
indexmap = "1.9.1"
jsonwebtoken = "7.2.0"
listenfd = { version = "0.3.5", optional = true }
log = "0.4.14"
mp3-metadata = "0.3.3"
paseto = "2.0.2"
percent-encoding = "2.1.0"
pin-project = "1.0.8"
rand = "0.8.4"
reqwest = { version = "0.11.6", features = ["cookies", "json", "stream"] }
rgb = "0.8.27"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
rusoto_signature = "0.47.0"
sentry-tracing = "0.25.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
serde_json = { version = "1.0.85", features = ["preserve_order"] }
serde_urlencoded = "0.7.1"
sha2 = "0.9.8"
time = "0.3.14"
tokio = "1.21.0"
tracing = "0.1.31"
url = { version = "2.3.1", features = ["serde"] }
uuid = "1.1.2"
quote = "1.0.18"
hashfn = "0.2.0"

# project deps
core = { path = "../core", features = ["db"] }
shared = { path = "../../shared/rust", features = ["backend"] }
csv = "1.1.6"

[dependencies.sendgrid]
default-features = false
features = ["native-tls", "async"]
version = "0.17.4"

[dependencies.sentry]
features = ["anyhow", "backtrace", "contexts", "panic", "tracing", "transport"]
version = "0.25.0"


[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio-native-tls",
  "macros",
  "postgres",
  "uuid",
  "json",
  "chrono",
  "offline",
  "migrate",
]
version = "0.6.1"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.9"


[features]
default = ["listenfd", "core/listenfd"]

# we use native-tls but this ensures we have a stable version of OpenSSL on *nix
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.36", features = ["vendored"] }

# argon2 *needs* perf
[profile.dev.package.argon2]
opt-level = 3

[dev-dependencies]
insta = { version = "1.19.1", features = ["redactions", "json"] }
once_cell = "1.14.0"
yup-oauth2 = { version = "7.0.1", features = ["hyper-rustls"] }
