[package]
name = "core"
version = "0.1.0"
authors = [
    "David Komer <david.komer@gmail.com>",
    "Chloe Ross <chloe@launchbadge.com>",
]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
chrono = "0.4.19"
# config = {path = "../../config/rust"}
hex = "0.4.3"
listenfd = { version = "0.3.5", optional = true }
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["json"] }
shared = { path = "../../shared/rust", features = ["backend"] }
serde = { version = "1.0.127", features = ["derive"] }
sqlx = { version = "0.5.6", default-features = false, features = ["postgres", "runtime-tokio-native-tls"], optional = true }
yup-oauth2 = "5.1.0"

[features]
db = ["sqlx"]

[dependencies.sentry]
version = "0.23.0"
features = ["anyhow", "backtrace", "contexts", "panic", "transport"]
