[package]
authors = [
  "David Komer <david.komer@gmail.com>",
  "Chloe Ross <chloe@launchbadge.com>",
]
edition = "2021"
name = "core"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
chrono = "0.4.22"
# config = {path = "../../config/rust"}
hex = "0.4.3"
listenfd = { version = "0.3.5", optional = true }
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
shared = { path = "../../shared/rust", features = ["backend"] }
sqlx = { version = "0.6.1", default-features = false, features = [
  "postgres",
  "runtime-tokio-native-tls",
], optional = true }
yup-oauth2 = "7.0.1"
tracing = "0.1.31"
time = "0.3.14"

[features]
db = ["sqlx"]

[dependencies.sentry]
features = ["anyhow", "backtrace", "contexts", "panic", "transport"]
version = "0.25.0"
