[package]
name = "ji-cloud-pages"
version = "0.1.0"
authors = ["dakom <david.komer@gmail.com>", "Chloe Ross <chloe@launchbadge.com>"]
edition = "2018"
publish = false

[dependencies]
actix-cors = "0.6.0-beta.2"
actix-files = "0.6.0-beta.6"
actix-web = "4.0.0-beta.9"

anyhow = "1.0.44"
askama = "0.10.5"
core = { path = "../core" }
dotenv = "0.15.0"
env_logger = "0.9.0"
listenfd = { version = "0.3.5", optional = true }
log = "0.4.14"
shared = { path = "../../shared/rust", features = ["backend"] }

[features]
default = ["listenfd", "core/listenfd"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.sentry]
version = "0.23.0"
default-features = false
features = ["anyhow", "backtrace", "contexts", "panic", "transport"]

# we use native-tls but this ensures we have a stable version of OpenSSL on *nix
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.36", features = ["vendored"] }
