[package]
name = "ji-cloud-pages"
version = "0.1.0"
authors = [
    "dakom <david.komer@gmail.com>",
    "Chloe Ross <chloe@launchbadge.com>",
]
edition = "2021"
publish = false

[dependencies]
actix-cors = "0.6.2"
actix-files = "0.6.2"
actix-web = "4.1.0"

anyhow = "1.0.64"
askama = "0.10.5"
ji_core = { path = "../ji_core", features = ["db"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
listenfd = { version = "0.3.5", optional = true }
log = "0.4.14"
shared = { path = "../../shared/rust", features = ["backend"] }
futures = "0.3.23"
regex = "1.6.0"
cached = "0.43.0"
reqwest = { version = "0.11.17", default-features = false, features = ["rustls-tls"] }
actix-web-httpauth = "0.8.2"

[dependencies.sqlx]
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "json",
    "chrono",
    "offline",
]
version = "0.6.3"

[features]
default = ["listenfd", "ji_core/listenfd"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
