[package]
name = "batch-tag"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
simplelog = "0.10.0"
cfg-if = "1.0.0"
dotenv = "0.15.0"
log = "0.4.14"
anyhow = "1.0.42"
uuid = "0.8.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_qs = "0.8.4"
url = "2.2.2"
reqwest = { version = "0.11.4", features = ["json", "stream"] }
futures = "0.3.16"
tokio = { version = "1.9.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
shared = { path = "../../shared/rust" }
csv = "1.1.6"
