[package]
name = "db_migrations"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
simplelog = "^0.8"
tokio = { version = "^0.2", features = ["full"] }
cfg-if = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
diesel = { version = "^1.4", features = ["chrono", "serde_json", "postgres", "r2d2"] }
diesel_migrations = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"
dotenv = "^0.15"
log = "^0.4"
futures-util = "0.3.4"
ji_cloud_shared = {path = "../../shared/rust", features=["backend"]}
# Needed for Postgres.
openssl = "*"

[features]
sqlproxy = []
