[package]
name = "config"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = { version = "0.2.74", features = ["nightly"], optional = true}
js-sys = { version = "0.3.51", optional = true }

[features]
wasm = ["wasm-bindgen", "js-sys"]
