[workspace]
members = [
    "crates/utils",
	"crates/components",
    # "crates/renderer",
	"crates/entry/dev/scratch/001",
	# "crates/entry/dev/showcase/001",
    "crates/entry/user",
    "crates/entry/admin",
    "crates/entry/home",
    "crates/entry/jig/edit",
    "crates/entry/jig/play",
	"crates/entry/legacy/_common",
	"crates/entry/legacy/play",
    "crates/entry/module/memory/edit",
    "crates/entry/module/memory/play",
	"crates/entry/module/flashcards/edit",
    "crates/entry/module/flashcards/play",
	"crates/entry/module/card-quiz/edit",
    "crates/entry/module/card-quiz/play",
	"crates/entry/module/matching/edit",
    "crates/entry/module/matching/play",
    "crates/entry/module/poster/edit",
    "crates/entry/module/poster/play",
    "crates/entry/module/tapping-board/edit",
    "crates/entry/module/tapping-board/play",
	"crates/entry/module/drag-drop/edit",
    "crates/entry/module/drag-drop/play",
]

[profile.release]
lto = true