[workspace]
members = [
    "crates/utils",
	"crates/components",
    # "crates/renderer",
	"crates/entry/dev/scratch/001",
	# "crates/entry/dev/showcase/001",
    "crates/entry/user",
    "crates/entry/admin",
    "crates/entry/home",
    "crates/entry/kids",
    "crates/entry/jig/edit",
    "crates/entry/jig/play",
    "crates/entry/module/memory/edit",
    "crates/entry/module/memory/play",
	"crates/entry/module/flashcards/edit",
    "crates/entry/module/flashcards/play",
	"crates/entry/module/card-quiz/edit",
    "crates/entry/module/card-quiz/play",
	"crates/entry/module/matching/edit",
    "crates/entry/module/matching/play",
    "crates/entry/module/poster/edit",
    "crates/entry/module/poster/play",
	"crates/entry/module/cover/edit",
    "crates/entry/module/cover/play",
    "crates/entry/module/video/edit",
    "crates/entry/module/video/play",
    "crates/entry/module/tapping-board/edit",
    "crates/entry/module/tapping-board/play",
	"crates/entry/module/drag-drop/edit",
    "crates/entry/module/drag-drop/play",
	"crates/entry/module/legacy/play",
	"crates/entry/module/legacy/edit",
]

[profile.release]
lto = true
opt-level = 'z'
wasm-opt = ['-Oz']
