[workspace]
members = [
    "crates/utils",
    "crates/components",
    # "crates/renderer",
    "crates/entry/dev/scratch/001",
    # "crates/entry/dev/showcase/001",
    "crates/entry/user",
    "crates/entry/community",
    "crates/entry/admin",
    "crates/entry/home",
    "crates/entry/kids",
    "crates/entry/asset/edit",
    "crates/entry/asset/play",
    "crates/entry/module/memory/edit",
    "crates/entry/module/memory/play",
    "crates/entry/module/flashcards/edit",
    "crates/entry/module/flashcards/play",
    "crates/entry/module/card-quiz/edit",
    "crates/entry/module/card-quiz/play",
    "crates/entry/module/matching/edit",
    "crates/entry/module/matching/play",
    "crates/entry/module/poster/edit",
    "crates/entry/module/poster/play",
    "crates/entry/module/cover/edit",
    "crates/entry/module/cover/play",
    "crates/entry/module/resource-cover/edit",
    "crates/entry/module/resource-cover/play",
    "crates/entry/module/video/edit",
    "crates/entry/module/video/play",
    "crates/entry/module/embed/edit",
    "crates/entry/module/embed/play",
    "crates/entry/module/tapping-board/edit",
    "crates/entry/module/tapping-board/play",
    "crates/entry/module/drag-drop/edit",
    "crates/entry/module/drag-drop/play",
    "crates/entry/module/find-answer/edit",
    "crates/entry/module/find-answer/play",
    "crates/entry/module/legacy/play",
    "crates/entry/module/legacy/edit",
]

[workspace.dependencies]
shared = { path = "../../../../shared/rust", features = ["wasm"] }
components = { path = "../../../../components" }
chrono = { version = "0.4.19", features = ["wasmbind"] }
thiserror = "1.0.30"
futures = "0.3.17"
itertools = "0.10.1"
async-trait = "0.1.51"
serde = { version = "1.0.130", features = ["derive"] }
serde_repr = "0.1.7"
base64 = "0.13.0"
strum = "0.22.0"
strum_macros = "0.22.0"
log = "0.4.14"
serde_json = "1.0.70"
cfg-if = "1.0.0"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
serde-wasm-bindgen = "0.4.1"
once_cell = "1.8.0"
uuid = { version = "1.2.1", features = ["serde", "js"] }
url = "2.2.2"
serde_qs = "0.8.5"
dominator = "0.5.22"
futures-signals = "0.3.23"
dominator_helpers = "0.7.2"
discard = "1.0.4"
htmlescape = "0.3.1"
gloo-timers = "0.2.1"
gloo = "0.4.0"
gloo-utils = "0.1.5"
console_error_panic_hook = "0.1.7"
wasm-logger = { version = "0.2.0" }
serde_derive = "1.0.130"
awsm_web = { version = "0.32.0", features = [
    "loaders",
    "serde_iso",
    "dom",
    "image",
    "audio",
    "canvas",
    "workers",
    "tick",
] }
anyhow = "1.0.45"
rgb = "0.8.29"
unicode-segmentation = "1.8.0"
lazy_static = "1.4.0"
wee_alloc = { version = "0.4.5" }
regex = "1.5.4"
rand = "0.8.4"
chrono-tz = { version = "0.6.0", features = ["serde"] }
convert_case = "0.6.0"
zxcvbn = "2.1.2"
web-sys = { version = "0.3.55", features = [
    'Url',
    'Request',
    'RequestInit',
    'RequestCredentials',
    'Response',
    'RequestMode',
    'Headers',
    'Window',
    'Document',
    'Element',
    'Location',
    'Storage',
    'UrlSearchParams',
    'CssStyleDeclaration',
    'DomRect',
    'HtmlDocument',
    'HtmlImageElement',
    'HtmlAudioElement',
    'HtmlIFrameElement',
    'HtmlSelectElement',
    'HtmlStyleElement',
    'HtmlVideoElement',
    'HtmlDivElement',
    'History',
    'CustomEvent',
    'CustomEventInit',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'ImageData',
    'Blob',
    'BlobPropertyBag',
    'Worker',
    'PointerEvent',
    'Path2d',
    'HtmlDialogElement',
    'HtmlOptionElement',
    'HtmlOptionsCollection',
    'ScrollBehavior',
    'ScrollIntoViewOptions',
    'Performance',
    'console',
    'DomParser',
    'SupportedType',
    'Navigator',
] }

[profile.release]
lto = true
opt-level = 'z'
