[package]
name = "shared"
version = "0.1.0"
authors = [
    "dakom <david.komer@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>", # chloe@launchbadge.com 
]
edition = "2021"
description = "shared types for ji cloud project"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.62"
base64 = "0.13.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = { version = "0.6.3", features = ["serde"] }
csv = "1.1.6"
http = "0.2.8"
http-serde = "1.0.3"
rgb = { version = "0.8.27", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.73"
serde_repr = "0.1.9"
serde_with = { version = "2.0.0", features = ["json", "macros"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde"] }
thiserror = "1.0.30"
strum = "0.22.0"
strum_macros = "0.22.0"

# wasm
wasm-bindgen = { version = "0.2.78", optional = true }
js-sys = { version = "0.3.55", optional = true }

# backend
actix-web = { version = "4.1.0", optional = true }

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "json",
    "chrono",
    "time",
    "offline",
    "migrate",
]
optional = true

[features]
backend = ["sqlx", "actix-web"]
wasm = ["wasm-bindgen", "js-sys"]
