[package]
name = "shared"
version = "0.1.0"
authors = [
    "dakom <david.komer@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>", # chloe@launchbadge.com
]
edition = "2021"
description = "shared types for ji cloud project"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.64"
base64 = "0.13.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.6.0", features = ["serde"] }
csv = "1.1.6"
http = "0.2.5"
http-serde = "1.0.3"
rgb = { version = "0.8.27", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_repr = "0.1.7"
serde_with = { version = "1.11.0", features = ["json", "macros"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde"] }
thiserror = "1.0.30"
strum = "0.25.0"
strum_macros = "0.25.0"
async-stripe = { version = "0.22.2", features = ["runtime-tokio-hyper-rustls"], optional = true }
macros = { path = "../macros" }
unicode-segmentation = "1.8.0"
derive_setters = "0.1.5"

# wasm
wasm-bindgen = { version = "0.2.78", optional = true }
js-sys = { version = "0.3.55", optional = true }

# backend
actix-web = { version = "4.1.0", optional = true }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "json",
    "chrono",
    "offline",
    "migrate",
]
optional = true

[features]
backend = ["sqlx", "actix-web", "async-stripe"]
wasm = ["wasm-bindgen", "js-sys"]
