[package]
name = "core"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.12"
jsonwebtoken = "^7.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
reqwest = {version = "^0.10", features = ["json"]}
futures-util = "^0.3"
percent-encoding = "^2.1"
config = {path = "../../../config/rust"}
anyhow = "1.0.32"

[features]
local = []
release = []
sandbox = []
