[package]
name = "core"
version = "0.1.0"
authors = [
    "David Komer <david.komer@gmail.com>",
    "Chloe Ross <chloe@launchbadge.com>",
]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
base64 = "0.12"
config = {path = "../../../config/rust"}
futures-util = "0.3"
jsonwebtoken = "7.1"
percent-encoding = "2.1"
reqwest = {version = "0.10", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["postgres", "runtime-tokio"], optional=true }
listenfd = { version = "0.3.3", optional = true }

[features]
sqlproxy = ["db"]
local = ["listenfd"]
release = []
sandbox = []
s3 = []
jwk = []
db = ["sqlx"]
