[package]
name = "ji-cloud-api"
version = "0.1.0"
authors = ["dakom <david.komer@gmail.com>"]
edition = "2018"

[dependencies]
server = { path = "../server" }
tokio = { version = "^0.2", features = ["full"] }
simplelog = "^0.8"
cfg-if = "^0.1"
log = "^0.4"
dotenv = "^0.15"
openssl-probe = "0.1.2"
ji_cloud_shared = {path = "../../../shared/rust", features=["backend"]}

# Needed for Postgres.
openssl = "*"

[features]
local = ["server/local"]
release = ["server/release"]
sandbox = ["server/sandbox"]
quiet = ["server/quiet"]
sqlproxy = []
local-quiet = ["local", "quiet"]
