[package]
name = "server"
version = "0.1.0"
authors = ["dakom <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
percent-encoding = "2.1.0"
simplelog = "^0.8"
listenfd = {version = "^0.3", optional = true }
jsonwebtoken = "^7.1"
reqwest = { version = "^0.10", features = ["json"] }
tokio = { version = "^0.2", features = ["full"] }
warp = "^0.2"
cfg-if = "^0.1"
sqlx = { git = "https://github.com/launchbadge/sqlx", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "json", "chrono"] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"
strum = "^0.18"
strum_macros = "^0.18"
lazy_static = "^1.4"
log = "^0.4"
futures-util = "0.3.4"
rand = "0.7"
ji_cloud_shared = {path = "../../../shared/rust", features=["backend"]}
actions = {path = "../actions"}
openssl = { version = "^0.10", features = ["vendored"] }

[features]
local = ["listenfd", "ji_cloud_shared/local", "actions/local"]
release = ["ji_cloud_shared/release", "actions/release"]
sandbox = ["ji_cloud_shared/sandbox", "actions/sandbox"]
quiet = ["actions/quiet"]
