[package]
name = "media-refresh"
version = "0.1.0"
authors = ["Chloe Ross <orangesnowfox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
csv = "1.1.5"
dotenv = "0.15.0"
flume = { version = "0.10.1", features = ["async"] }
futures = "0.3.12"
indicatif = "0.15.0"
log = "0.4.14"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
shared = { path = "../../../shared/rust" }
simplelog = "0.9.0"
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
uuid = "0.8.2"
