[package]
name = "s3-key-migrate"
version = "0.1.0"
authors = ["Chloe Ross <orangesnowfox@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
dotenv = "0.15.0"
futures = "0.3.12"
indicatif = "0.15.0"
log = "0.4.14"
phf = { version = "0.8.0", features = ["macros"] }
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
shared = { path = "../../../shared/rust" }
tokio = { version = "1.0", default-features = false, features = ["rt"] }
uuid = "0.8.2"
simplelog = "0.9.0"
