[package]
name = "s3-key-migrate"
version = "0.1.0"
authors = ["Chloe Ross <orangesnowfox@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.38"
clap = { version = "3.2.20", default-features = false, features = [
    "derive",
    "env",
] }
dotenv = "0.15.0"
futures = "0.3.24"
indicatif = "0.15.0"
log = "0.4.14"
phf = { version = "0.8.0", features = ["macros"] }
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
shared = { path = "../../../shared/rust" }
tokio = { version = "1.21.0", default-features = false, features = [
    "rt",
    "macros",
    "rt-multi-thread",
] }
uuid = "1.1.2"
simplelog = "0.9.0"
