[package]
name = "meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../../shared/rust" }
utils = { path = "../../../frontend/apps/crates/utils" }
components = { path = "../../../frontend/apps/crates/components" }
scan_fmt = "0.2.6"
structopt = "0.3.26"
simplelog = "0.12.0"
cfg-if = "1.0.0"
dotenv = "0.15.0"
log = "0.4.17"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["raw_value"] }
serde_repr = "0.1.9"
url = "2.3.1"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
csv = "1.1.6"
image = "0.24.5"
flate2 = "1.0.25"
uuid = { version = "1.2.2", features = ["serde", "v1"] }
serde_with = { version = "2.1.0", features = ["json", "macros"] }
